--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/speech": "^6.7.0",
+    "@google-cloud/text-to-speech": "^5.6.0",
     "@google-cloud/vertexai": "^1.9.0",
     "markdown-it": "^14.1.0",
     "socket.io": "^4.8.1"
