--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@google-cloud/speech": "^6.7.0",
     "@google-cloud/text-to-speech": "^5.6.0",
     "@google-cloud/vertexai": "^1.9.0",
+    "dotenv": "^16.4.5",
     "markdown-it": "^14.1.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "twilio": "^5.3.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
