--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "markdown-it": "^14.1.0",
     "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1",
-    "twilio": "^5.3.6"
+    "twilio": "^5.3.6",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
