--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^6.7.0",
+    "@google-cloud/storage": "^7.14.0",
     "@google-cloud/text-to-speech": "^5.6.0",
     "@google-cloud/vertexai": "^1.9.0",
     "dotenv": "^16.4.5",
