--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^7.14.0",
     "@google-cloud/text-to-speech": "^5.6.0",
     "@google-cloud/vertexai": "^1.9.0",
+    "@google-cloud/vision": "^4.3.2",
     "dotenv": "^16.4.5",
     "markdown-it": "^14.1.0",
     "mongoose": "^8.8.3",
