--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@google-cloud/text-to-speech": "^5.6.0",
     "@google-cloud/vertexai": "^1.9.0",
     "@google-cloud/vision": "^4.3.2",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.5",
+    "euclidean-distance": "^1.0.0",
     "markdown-it": "^14.1.0",
     "mongoose": "^8.8.3",
     "nodemailer": "^6.9.16",
