--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@google-cloud/vertexai": "^1.9.0",
     "@google-cloud/vision": "^4.3.2",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "euclidean-distance": "^1.0.0",
+    "express": "^4.21.2",
     "markdown-it": "^14.1.0",
     "mongoose": "^8.8.3",
     "nodemailer": "^6.9.16",
